--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,3 +5,20 @@ body{
 
   font-family: Arial, Helvetica, sans-serif;
 }
+
+*{
+  width: 100%;
+  max-width: 1200px; /* Optional for content centering */
+  margin: 0 auto; /* Center content horizontally */
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden; /* Prevent horizontal scrolling */
+}
+
+div {
+  width: 100%;
+}
